[package]
name = "vanadium"
version = "0.0.1"
authors = ["Quentin Baradat"]

description = "This crate is a rewrite of SaVi written in rust to create satellite constellation."
repository = "https://github.com/quentinbaradat/vanadium"
readme = "README.md"
keywords = ["satellite", "constellation", "cesium"]
license = "MIT/Apache-2.0"


[lib]
name = "vanadium"